--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -84,16 +84,16 @@
     <div class="block-1">
       <div class="block-1__bg">
         <h1>
-          <p class="b1-top">CRNA ZOVA&nbsp;&nbsp;&nbsp;&nbsp; JUŽNOAFRIČKA MUŠKATLA &nbsp;&nbsp;&nbsp;&nbsp; BETA GLUKAN</p>
-          SPREMITE SE ZA ZIMU<br>
-          <span>I OTKRIJTE KAKO ĆE PORODICA SUPERJUNAKA </span><br>
+          <p class="b1-top">JUŽNOAFRIČKA MUŠKATLA &nbsp;&nbsp;&nbsp;&nbsp; CRNA ZOVA&nbsp;&nbsp;&nbsp;&nbsp; BETA GLUKAN</p>
+          
+          <span>OTKRIJTE KAKO ĆE PORODICA SUPERJUNAKA </span><br>
           <p class="b1-bottom">POBEDITI VIRUSE</p>
         </h1>
       </div>
       <h1 class="h1-mob">
-        <p class="b1-top">CRNA ZOVA&nbsp;&nbsp;&nbsp;&nbsp; JUŽNOAFRIČKA MUŠKATLA &nbsp;&nbsp;&nbsp;&nbsp; BETA GLUKAN</p>
-          SPREMITE SE ZA ZIMU<br>
-        <span>I OTKRIJTE KAKO ĆE PORODICA SUPERJUNAKA </span><br>
+        <p class="b1-top">JUŽNOAFRIČKA MUŠKATLA &nbsp;&nbsp;&nbsp;&nbsp; CRNA ZOVA&nbsp;&nbsp;&nbsp;&nbsp; BETA GLUKAN</p>
+          
+        <span>OTKRIJTE KAKO ĆE PORODICA SUPERJUNAKA </span><br>
         <span class="span-stupid">POBEDITI VIRUSE</span>
       </h1>
       <div class="block-1__info">
@@ -161,7 +161,7 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Neka deca se često razboljevaju i dešava se da period između dve prehlade traje samo nekoliko dana. To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže organizmu u lakšem i bržem ozdravljenju.</p>
+            <p>To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže organizmu u lakšem i bržem ozdravljenju.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -176,7 +176,7 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Povišena temperatura, groznica, suvi kašalj, zapušen nos ili obilno curenje iz nosa su prvi simptomi virusnih infekcija disajnih puteva. Mogu da se jave u bilo koje doba godine, kod bilo koje osobe: predškolaca, školaraca, odraslih ili starih osoba. Alpikol sirup, zahvaljući svom prirodnom sastavu pojačaće otpornost organizma i ojačati imunitet tokom bolesti. Uz Alpikol sirup bolest kraće traje. Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Primenom Alpikol sirupa u prvim satima od pojave simptoma virusne infekcije disajnih puteva, svi simptomi mogu da se smanje i da se već sutra vratite svojim svakodnevnim aktivnostima.</p>
+            <p>Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Primenom Alpikol sirupa u prvim satima od pojave simptoma virusne infekcije disajnih puteva, svi simptomi mogu da se smanje i da se već sutra vratite svojim svakodnevnim aktivnostima.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -191,7 +191,7 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Naporan raspored, prekovremeni sati na poslu, službena putovanja prolaze u savršenom redu uz Alpikol sirup. Alpikol sirup svojim prirodnim sastojcima povećava otpornost  organizma a sve obaveze prolaze bez kašlja, povišene temperature i neprijatnog šmrkanja. Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Svakodnevna izloženost stresu na poslu vodi do slabljenja imunog odgovora i bržeg razvoja virusnih infekcija.</p>
+            <p>Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Svakodnevna izloženost stresu na poslu vodi do slabljenja imunog odgovora i bržeg razvoja virusnih infekcija.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -206,7 +206,7 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Za uspešno i brzo učenje potrebno je puno energije koju može da pruži samo potpuno zdrav organizam. Alpikol sirup sadrži ekstrakt ploda crne zove, bogat antioksidansima, poznatim čuvarima zdravlja u borbi protiv slobodnih radikala. Prirodni sastojci Alpikol sirupa  plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Učenje i polaganje ispita, naporne mentalne aktivnosti predstavljaju veliki stres za organizam. On često dovodi do slabljenja imuniteta i otpornosti organizma koje vode u bolest.</p>
+            <p>Prirodni sastojci Alpikol sirupa  plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Učenje i polaganje ispita, naporne mentalne aktivnosti predstavljaju veliki stres za organizam. On često dovodi do slabljenja imuniteta i otpornosti organizma koje vode u bolest.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
