--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -292,6 +292,13 @@ Bez konzervansa, bez veštačkih boja i aroma.
       </h3>
       <div class="map-content">
       	<a class="source source-6" href="https://www.apotekanet.rs/alpikol-imuno-sirup-120ml"></a>
+      	<a class="source source-8" href="https://primax.rs/"></a>
+      	<a class="source source-9" href="https://benu.rs/"></a>
+      	<a class="source source-10" href="https://drmax.rs/"></a>
+      	<a class="source source-11" href="http://www.apotekasvetisava.rs/ "></a>
+      	<a class="source source-12" href="https://jugofarm.com/"></a>
+      	<a class="source source-13" href="https://melisa.rs/"></a>
+      	<a class="source source-14" href="https://www.oazazdravlja.rs/"></a>
       </div>
 
     </map>
