--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -295,8 +295,8 @@ Bez konzervansa, bez veštačkih boja i aroma.
       	<a class="source source-8" href="https://primax.rs/"></a>
       	<a class="source source-9" href="https://benu.rs/"></a>
       	<a class="source source-10" href="https://drmax.rs/"></a>
-      	<a class="source source-11" href="http://www.apotekasvetisava.rs/ "></a>
-      	<a class="source source-12" href="https://jugofarm.com/"></a>
+      	<a class="source source-11" href="http://www.apotekasvetisava.rs/?s=alpikol"></a>
+      	<a class="source source-12" href="https://jugofarm.com/apoteka/imunitet/alpikol-imuno-sirup/"></a>
       	<a class="source source-13" href="https://melisa.rs/"></a>
       	<a class="source source-14" href="https://www.oazazdravlja.rs/"></a>
       </div>
