--- a/Vitango-new/index.html
+++ b/Vitango-new/index.html
@@ -251,8 +251,8 @@
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
                       Вітанго® Р.П. МОЗ України UA/14378/01/01 від 11.02.2021. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції. 
-                        <br>Виробник: Dr. Willmar Schwabe GmbH & Co. KG (Німеччина) <br>
-                        Виробник<br>
+                        <br>
+                        Виробник: 
 
 Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
 
@@ -260,7 +260,7 @@
 
 «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
 
-Імпортер:<br>
+Імпортер: 
 
 ПрАТ «Натурфарм» Україна, 04075　Київ,　Пуща-Водиця, вул. Лісна, 30-А.<br>
 
