--- a/Vitango-new/index.html
+++ b/Vitango-new/index.html
@@ -250,21 +250,15 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Вітанго® Р.П. МОЗ України UA/14378/01/01 від 11.02.2021. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції. 
+                      Вітанго® Р.П. МОЗ України UA/14378/01/01 від 11.02.2021. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції.
                         <br>
-                        Виробник: 
+                        <strong>Виробник:</strong> Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
 
-Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
+<strong>Ексклюзивний представник в Україні:</strong> «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
 
-Ексклюзивний представник в Україні:<br>
+<strong>Імпортер:</strong> ПрАТ «Натурфарм» Україна, 04075　Київ,　Пуща-Водиця, вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua.<br>
 
-«Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
-
-Імпортер: 
-
-ПрАТ «Натурфарм» Україна, 04075　Київ,　Пуща-Водиця, вул. Лісна, 30-А.<br>
-
-                     <br>Ексклюзивний дистриб’ютор в Україні ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua. Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Вітанго® будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Вітанго® будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
