--- a/Vitango-new/index-ru.html
+++ b/Vitango-new/index-ru.html
@@ -249,10 +249,15 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Витанго® Р.П. МОЗ Украины UA/14378/01/01 от 08.05.2015. Реклама лекарственного средства. Отпускается без рецепта. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Имеются противопоказания и побочные реакции.
-                        Производитель: Dr. Willmar Schwabe GmbH & Co. KG (Германия)<br>
+                      РП  UA/14378/01/01, необмежений термін дії з 02.07.2020, Наказ МОЗ №1500 від 02.07.2020 р., зміни внесено Наказ МОЗ №238 від 11.02.2021 р. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції.
+                        <br>
+                        <strong>Виробник:</strong> Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
 
-                     <br>Эксклюзивный дистрибьютор в Украине ПрАТ «Натурфарм», ул. Лесная, 30-А, г. Киев, Пуща-Водица, 04075, тел.: (044) 401–81–03, www.naturpharm.ua. Если Вы хотите сообщить о возникновении побочной реакции и/или у вас есть вопрос касательно медицинской информации и/или жалобы на качество лекарственного средства Витанго®, пожалуйста, присылайте письмо по электронному адресу: pharmacovigilance-ua@alpenpharma.com».
+<strong>Ексклюзивний представник в Україні:</strong> «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
+
+<strong>Імпортер:</strong> ПрАТ «Натурфарм» Україна, 04075　Київ,　Пуща-Водиця, вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua.<br>
+
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Вітанго® будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
