--- a/Vitango-new/index.html
+++ b/Vitango-new/index.html
@@ -250,7 +250,7 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Вітанго® Р.П. МОЗ України UA/14378/01/01 від 11.02.2021. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції.
+                      РП  UA/14378/01/01, необмежений термін дії з 02.07.2020, Наказ МОЗ №1500 від 02.07.2020 р., зміни внесено Наказ МОЗ №238 від 11.02.2021 р. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції.
                         <br>
                         <strong>Виробник:</strong> Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
 
