--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -226,7 +226,7 @@
 
       <div class="container-10">
       	<p>
-      		<span>Джерела інформації:</span>
+      		<span>Джерела інформації:</span><br>
 1. Адаптовано з https://www.webmd.com/.<br> 
 2. Kasper S et al. No withdrawal symptoms after discontinuation of Silexan. Poster presented at the annual congress of the German Association for Psychiatry and Psychotherapy (DGPPN), Berlin, Germany, 2011; Kasper S et al. Silexan for anxiety disorders and related conditions. Psychopharmakotherapie 2015;22:15–24. <br>
 3. Müller WE, Schuwald A, Nöldner M, Kasper S, Friedland K. Pharmakologische Grundlagen der therapeutischen Anwendung von Silexan (Lasea®). Psychopharmakotherapie 2015; 22: 3-13. <br>
