--- a/Klimaktoplan-LT/index.html
+++ b/Klimaktoplan-LT/index.html
@@ -11,6 +11,14 @@
     <script src="js/script.js"></script>
   </head>
   <body>
+    <!-- //////license start -->
+      <div class="alert-license">
+  <span>
+    Mēs izmantojam sīkdatnes, lai uzlabotu tīmekļa vietni. Turpinot lietot šo tīmekļa vietni, Jūs piekrītat sīkdatņu izmantošanai un mūsu <b><a href="license.html" >konfidencialitātes politikai.</b></a>
+  </span>
+  <button class="license-off"><p>ES piekrītu</p></button>
+</div>
+<!-- //////license fin -->
   <div class="navigation-logo">
     <a  href="#top" class="logo"></a>
     
