--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -70,6 +70,17 @@
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
+
+
+      <!-- //////license start -->
+      <div class="alert-license">
+  <span>
+    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta slažete se sa upotrebom kolačića i naše <b><a href="license.html" >Politike privatnosti</b></a>
+  </span>
+  <button class="license-off"><p>Slažem se</p></button>
+</div>
+<!-- //////license fin -->
+
 	<div class="container-1">
 		<div class="container-1_left">
 			<h1><span>Повернення</span><br><span>до внутрішнього</span><br><span>спокою</span></h1>
