--- a/Vitango-new/index-ru.html
+++ b/Vitango-new/index-ru.html
@@ -23,7 +23,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="./index.html"></a>
-            <a class="where-to-buy-mob" href="#sticker">Де купити</a>
+            <a class="where-to-buy-mob" href="#5">Где купить</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#1" >Преимущества</a>
                 <a class="navmenu" href="#3">Как принимать</a>
@@ -119,7 +119,7 @@
           <h2>Начните активно свое утро, чтобы зарядиться энергией на день!</h2>
       </div>
       <div class="container2-mob">
-            <div class="container2-mob_img"></div>
+            <div class="container2-mob_img container2-mob_img-ru"></div>
           <h2>Начните активно свое утро, чтобы зарядиться энергией на день!</h2>
           <div class="container2-mob_main-img"></div>
       </div>
@@ -150,7 +150,7 @@
           <h2>Стремитесь всё успеть на работе? Сконцентрируйтесь, не теряйте ни секунды!</h2>
       </div>
       <div class="container2-mob">
-            <div class="container4-mob_img"></div>
+            <div class="container4-mob_img container4-mob_img-ru"></div>
           <h2>Стремитесь всё успеть на работе? Сконцентрируйтесь, не теряйте ни секунды!</h2>
           <div class="container4-mob_main-img"></div>
       </div>
@@ -183,7 +183,7 @@
           <h2>Хотите проводить больше времени с близкими? Управляйте своим днём, или день будет управлять вами!</h2>
       </div>
       <div class="container2-mob">
-            <div class="container6-mob_img"></div>
+            <div class="container6-mob_img container6-mob_img-ru"></div>
           <h2>Хотите проводить больше времени с близкими? Управляйте своим днём, или день будет управлять вами!</h2>
           <div class="container6-mob_main-img"></div>
       </div>
