--- a/Vitango-new/index.html
+++ b/Vitango-new/index.html
@@ -23,7 +23,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="./index.html"></a>
-            <a class="where-to-buy-mob" href="#sticker">Де купити</a>
+            <a class="where-to-buy-mob" href="#5">Де купити</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#1" >ПЕРЕВАГИ</a>
                 <a class="navmenu" href="#3">Як приймати </a>
