--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -27,7 +27,7 @@
           <ul id="menu">
             <li>
               <a class="translated-text" href="#leader" key="leader"
-                >Одне рішення</a
+                >ПЕРЕВАГИ</a
               >
             </li>
             <li>
@@ -41,24 +41,28 @@
             <li>
               <a class="translated-text" href="#buy" key="buy">де придбати</a>
             </li>
+            <li>
+              <a class="translated-text" href="#faq" key="faq">faq</a>
+            </li>
             <!--              <li><a class="translated-text" class="language" id="language" key="product-description">ru</a></li>-->
-            <a class="translateBtn language" language="ru">ru</a>
-            <a class="translateBtn language" language="ua">ua</a>
+<!--             <a class="translateBtn language" language="ru">ru</a>
+            <a class="translateBtn language" language="ua">ua</a> -->
 
             <!--              <span class="translated-text" key="product-description">RU</span>-->
           </ul>
         </div>
       </div>
       <div class="desctop-navigation">
-        <a class="translated-text" href="#leader" key="leader">Одне рішення</a>
+        <a class="translated-text" href="#leader" key="leader">ПЕРЕВАГИ</a>
         <a class="translated-text" href="#acting" key="acting">як діє</a>
         <a class="translated-text" href="#reception" key="reception"
           >спосiб застосування</a
         >
         <a class="translated-text" href="#buy" key="buy">де придбати</a>
+        <a class="translated-text" href="#faq" key="faq">faq</a>
         <!--        <a class="translated-text" class="language" id="language" key="language">ru</a>-->
-        <a class="translateBtn language" language="ru">ru</a>
-        <a class="translateBtn language" language="ua">ua</a>
+<!--         <a class="translateBtn language" language="ru">ru</a>
+        <a class="translateBtn language" language="ua">ua</a> -->
 
         <!--        <span class="translated-text" key="product-description">RU</span>-->
         <!--        <div class="block-container">-->
@@ -228,8 +232,6 @@
             При алергiчному дерматитi<sup>1</sup>
           </p>
         </li>
-      </ul>
-      <ul>
         <li>
           <div></div>
           <p class="translated-text" key="symptom-four">Кишковi колiки<sup>1</sup></p>
@@ -259,40 +261,36 @@
 
 
       <div class="new-part">
-        <h3 class=" translated-text" key="application-text" >СИТУАЦІЇ РІЗНІ – РІШЕННЯ ОДНЕ</h3>
+        <h3 class=" translated-text" key="application-text" >Переваги АКТИВ ФЛОРА бебі</h3>
         <div class="new-part_logo"></div>
         <div class="new-part_container">
           <div class="new-part_container1">
             <div class="new-part_plate translated-text" key="application-text-one">
-              <h4>№1 НАЙБІЛЬШ ВИВЧЕНА БАКТЕРІЯ LACTOBACILLUS RHAMNOSUS GG<sup>1</sup></h4>
+              <h4>№1 найбільш вивчена бактерія Lactobacillus rhamnosus GG<sup>1</sup></h4>
                 <!-- <p>Призначена для новонароджених, немовлят, дітей та дорослих.
                   Може також використовуватися у недоношених дітей і новонароджених з низькою вагою при народженні.
                 </p> -->
             </div>
             <div class="new-part_plate translated-text" key="application-text-three">
-              <h4>РІВЕНЬ ДОКАЗОВОСТІ «1» В ПРОФІЛАКТИЦІ АНТИБІОТИКО-АСОЦІЙОВАНОЇ ДІАРЕЇ ТА ЛІКУВАННІ ІНФЕКЦІЙНОЇ ДІАРЕЙ<sup>1</sup></h4>
+              <h4>Рівень доказовості «1» в профілактиці антибіотико-асоційованої діареї та лікуванні інфекційної діареї<sup>1</sup></h4>
               <!-- <p>Зручний спосіб застосування.</p> -->
             </div>
-            <div class="new-part_plate translated-text" key="application-text-five">
-              <h4>Перший пробіотик з оливковою олією!<sup>2</sup></h4>
-              <!-- <p>Жирні кислоти оливкової олiї найбільш споріднені з жирними кислотами грудного молока.<sup>3</sup></p> -->
+            <div class="new-part_plate  translated-text" key="application-text-seven">
+              <h4>1-й пробіотик з оливкою олією<sup>2</sup>жирні кислоти якого  найбільш схожі до грудного молока<sup>3</sup></h4>
+              <!-- <p>Lactobacillus rhamnosus (LGG) є найбільш вивченим у світі штамом пробіотичних мікроорганізмів.</p> -->
             </div>
           </div>
           <div class="new-part_container2">
             <div class="new-part_plate translated-text" key="application-text-two">
-              <h4>ДО ЗАСТОСУВАННЯ З 1-го ДНЯ ЖИТТЯ</h4>
+              <h4>До застосування з 1-го дня життя</h4>
               <!-- <p>Лактобактерія LGG має найвищий рівень доказової бази при діареї у дітей та дорослих.</p> -->
             </div>
             <div class="new-part_plate translated-text" key="application-text-four">
-              <h4>ЗРУЧНЕ ЗАСТОСУВАННЯ 1 РАЗ В ДЕНЬ</h4>
+              <h4>Зручне застосування - 1 раз в день</h4>
               <!-- <p>Перший європейський пробіотик з найвищим вмістом діючої речовини (бактерії LGG) в одній краплі.<sup>2</sup></p> -->
             </div>
             <div class="new-part_plate  translated-text" key="application-text-six">
-              <h4>МІСТИТЬ 1 МІЛЬЯРД БАКТЕРІЙ LGG В 1-й КРАПЛІ</h4>
-              <!-- <p>Lactobacillus rhamnosus (LGG) є найбільш вивченим у світі штамом пробіотичних мікроорганізмів.</p> -->
-            </div>
-            <div class="new-part_plate  translated-text" key="application-text-seven">
-              <h4>1-й ПРОБІОТИК З ОЛИВКОЮ ОЛІЄЮ2, ЖИРНІ КИСЛОТИ ЯКОГО  НАЙБІЛЬШ СХОЖІ ДО ГРУДНОГО МОЛОКА<sup>3</sup></h4>
+              <h4>Містить 1 мільярд бактерій LGG в 1-й краплі</h4>
               <!-- <p>Lactobacillus rhamnosus (LGG) є найбільш вивченим у світі штамом пробіотичних мікроорганізмів.</p> -->
             </div>
           </div>
@@ -540,6 +538,8 @@
         </li>
       </ul>
     </div>
+    <a name="logo"></a>
+    <h3>FAQ</h3>
 
     <div class="open-block">
       <div class="open-block-inner">
@@ -672,7 +672,7 @@
         <p class="translated-text" key="disclamer-text">
         На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці.</p>
 
-          <p class="translated-text" key="disclamer-text2">Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.</p>
+          <p class="translated-text" key="disclamer-text2">Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.</p><br>
 
           <p class="translated-text" key="disclamer-text3">Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com»</p>
           <p class="translated-text" key="disclamer-text4">Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03.</p>
