--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -538,7 +538,7 @@
         </li>
       </ul>
     </div>
-    <a name="logo"></a>
+    <a name="faq"></a>
     <h3>FAQ</h3>
 
     <div class="open-block">
