--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ActiveFloraBaby</title>
+    <title>Актив Флора бебі</title>
     <meta name="description" content="ActiveFloraBaby" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
