--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -127,11 +127,11 @@
         <div class="block-3__container-content">
           <h4>Dete pohađa vrtić i često je bolesno?</h4>
           <p>
-            Iako su deca predškolskog uzrasta veća i otpornija još uvek se često razboljevaju obzirom da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup, zahvaljujući svom prirodnom sastavu pomaže otpornosti organizma na viruse.
+            Iako su deca predškolskog uzrasta veća i otpornija još uvek se često razboljevaju obzirom da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže otpornosti organizma na viruse.
           </p>
 <!--          //////-->
           <div class="panel">
-            <p>Njegovi prirodni sastojci – plod crne zove, koren južnoafričke muškatle i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti dečjeg organizma i jačaju imuni sistem. Dok su u kolektivu, naša deca su izložena velikom broju virusa i bakterija koji vrebaju dečiji organizam.​</p>
+            <p>Njegovi prirodni sastojci – plod crne zove, koren južnoafričke muškatle i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti dečijeg organizma i jačaju imuni sistem. Dok su u kolektivu, naša deca su izložena velikom broju virusa i bakterija koji vrebaju dečiji organizam.​</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
 <!--          //////-->
@@ -161,7 +161,9 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže organizmu u lakšem i bržem ozdravljenju.</p>
+            <p>To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže organizmu u lakšem i bržem ozdravljenju.<br>
+            Njegovi prirodni sastojci – plod crne zove, koren južnoafričke muškatle i beta glukan Yestimun® zajedno pomažu boljoj otpornosti dečijeg organizma i jačaju imuni sistem. Dok su u kolektivu, naša deca su izložena velikom broju virusa i bakterija koji vrebaju dečiji organizam.
+            </p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -172,11 +174,11 @@
         <div class="block-3__container-content">
           <h4>Upravo su krenuli simptomi prehlade ili gripa?​</h4>
           <p>
-            Povišena temperatura, groznica, suvi kašalj, zapušen nos ili obilno curenje iz nosa su prvi simptomi virusnih infekcija disajnih puteva. Mogu da se jave u bilo koje doba godine, kod bilo koje osobe: predškolaca, školaraca, odraslih ili starih osoba. Alpikol sirup zahvaljući svom prirodnom sastavu pojačaće otpornost organizma i ojačati imunitet tokom bolesti. Uz Alpikol sirup bolest kraće traje.
+            Povišena temperatura, groznica, suvi kašalj, zapušen nos ili obilno curenje iz nosa su prvi simptomi virusnih infekcija disajnih puteva. Mogu da se jave u bilo koje doba godine, kod bilo koje osobe: predškolaca, školaraca, odraslih ili starih osoba. Alpikol sirup zahvaljujući svom prirodnom sastavu pojačaće otpornost organizma i ojačati imunitet tokom bolesti. Uz Alpikol sirup bolest kraće traje.
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Primenom Alpikol sirupa u prvim satima od pojave simptoma virusne infekcije disajnih puteva, svi simptomi mogu da se smanje i da se već sutra vratite svojim svakodnevnim aktivnostima.</p>
+            <p>Njegovi prirodni sastojci – plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Primenom Alpikol sirupa u prvim satima od pojave simptoma virusne infekcije disajnih puteva svi simptomi mogu da se smanje i da se već sutra vratite svojim svakodnevnim aktivnostima.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -206,7 +208,7 @@
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Prirodni sastojci Alpikol sirupa  plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Učenje i polaganje ispita, naporne mentalne aktivnosti predstavljaju veliki stres za organizam. On često dovodi do slabljenja imuniteta i otpornosti organizma koje vode u bolest.</p>
+            <p>Prirodni sastojci Alpikol sirupa  plod crne zove, južnoafrička muškatla i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti organizma i jačaju imuni sistem. Učenje i polaganje ispita, naporne mentalne aktivnosti predstavljaju veliki stres za organizam. On često dovodi do slabljenja imuniteta i otpornosti organizma koje vodi u bolest.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -227,7 +229,7 @@
         <div class="block-4__container">
             <div class="block-4__container-img"></div>
             <div class="block-4__container-content">
-                <h4>Ekstrakt ploda crne zove​<br><p>(Sambucus nigra)</p></h4>
+                <h4>Ekstrakt ploda crne zove​<br><p><i>(Sambucus nigra)</i></p></h4>
                 <p>
                   Zahvaljujući jakom antioksidativnom delovanju crna zova doprinosi jačanju imunog sistema.<sup>1,2,3,4</sup>
                 </p>
@@ -274,9 +276,8 @@
         </div>
         <p class="block-5__bottom-content">​
 
-Pre upotrebe promućkati! <br>Preporučena dnevna doza se ne sme prekoračiti. Dodaci ishrani se ne mogu koristiti kao zamena za raznovrsnu ishranu. Čuvati van domašaja dece. <br>Nije namenjeno trudnicama, dojiljama, deci ispod 3 godine. Proizvod ne smeju da koriste osobe preosteljive na bilo koji sastojak, osobe sa oboljenjima jetre ili povećanim rizikom od krvarenja. U slučaju preosetljivosti ili neželjenih reakcija potrebno je prekinuti sa uzimanjem i javiti se lekaru. <br>Ne preporučuje se uzimanje duže od 2 nedelje u kontinuitetu.​
-Nakon otvaranja bočicu čuvati u frižideru ne duže od 2 nedelje.​
-Bez konzervansa, bez veštačkih boja i aroma.
+Pre upotrebe promućkati! <br>Preporučena dnevna doza se ne sme prekoračiti. Dodaci ishrani se ne mogu koristiti kao zamena za raznovrsnu ishranu. Čuvati van domašaja dece. <br>Nije namenjeno trudnicama, dojiljama, deci ispod 3 godine. Proizvod ne smeju da koriste osobe preosetljive na bilo koji sastojak, osobe sa oboljenjima jetre ili povećanim rizikom od krvarenja. U slučaju preosetljivosti ili neželjenih reakcija potrebno je prekinuti sa uzimanjem i javiti se lekaru. <br>Ne preporučuje se uzimanje duže od 2 nedelje u kontinuitetu. 
+ Nakon otvaranja bočicu čuvati u frižideru ne duže od 2 nedelje. Bez konzervansa, bez veštačkih boja i aroma.
           <a name="map"></a>
         </p>
 
