--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-<a target="_blank" class="instruction" href="./instruction.pdf">
+<a target="_blank" class="instruction" href="https://www.your.lasea.in.ua/instruction.pdf">
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
