--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		text-transform: uppercase;
 	}
 	a::before {
 		content: '';
