--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -73,12 +73,12 @@
 
 
       <!-- //////license start -->
-      <div class="alert-license">
+<!--       <div class="alert-license">
   <span>
     Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta slažete se sa upotrebom kolačića i naše <b><a href="license.html" >Politike privatnosti</b></a>
   </span>
   <button class="license-off"><p>Slažem se</p></button>
-</div>
+</div> -->
 <!-- //////license fin -->
 
 	<div class="container-1">
