--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <a class="logo"></a>
-    <meta name="description" content="vaksol"/>
+    <meta name="description" content="vaxol"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="shortcut icon" href="./images/Vector (1).svg" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
