--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<a href="Tansilotren-KZ/index.html">tOnsilotren-KZ</a>
 			<a href="Tansilotren-AZ/index.html">tOnsilotren-AZ</a>
 			<a href="Tansilotren-BY/index.html">tOnsilotren-BY</a>
-			<a href="Vaksol/index.html">Vaksol</a>
+			<a href="Vaksol/index.html">Vaxol</a>
 			<a href="Solidagoren/index.html">Solidagoren</a>
 			<a href="gastritol-new/index.html">gastritol-new</a>
 			<a href="Tansilotren-Moldova/index.html">tOnsilotren-Moldova</a>
