--- a/Owey/special.html
+++ b/Owey/special.html
@@ -151,18 +151,17 @@
         <div class="big-plate">
             <div class="big-plate_text">
                 <h4>
-                    Purifying
+                    Rebalancing
                 </h4>
                 <p>
-                    Догляд за волоссям та шкірою голови з лупою: шампунь від лупи для жирної шкіри голови 240/950 мл, шампунь від лупи для сухої шкіри голови 240/950 мл, засіб від лупи для жирної шкіри голови 50 мл, засіб від лупи для сухої шкіри голови 50 мл, очищуючий пілінг з мікрогранулами рисового воску 150мл, пудра тим'яна 80г
+                    Догляд за шкірою голови з надлишком шкірного жиру: шампунь 240/950 мл, пудра шавлії 50 г, глина амазонська 150 мл
                 </p>
-
-                <p><b>Мета: лікування лупи та лущення.</b>
-                Ідеально підходить для сухої та жирної лупи на шкірі голови. 
+                <p><b>Мета: регулювання надлишку себуму.</b>
+                    Ідеально підходить для шкіри голови з надмірним виділенням себуму.
                 </p>
 
                 <p><b>Активні компоненти:</b>
-                    біодинамічний розмарин, біодинамічний тим’ян, мікрогранули рисового воску та соєвий лецитин.
+                    біодинамічна шавлія, органічна очанка, біла амазонська глина, клопогін.
                 </p>
             </div>
             <div class="big-plate_img"></div>
@@ -170,18 +169,17 @@
         <div class="big-plate">
             <div class="big-plate_text">
                 <h4>
-                    Purifying
+                    Soothing
                 </h4>
                 <p>
-                    Догляд за волоссям та шкірою голови з лупою: шампунь від лупи для жирної шкіри голови 240/950 мл, шампунь від лупи для сухої шкіри голови 240/950 мл, засіб від лупи для жирної шкіри голови 50 мл, засіб від лупи для сухої шкіри голови 50 мл, очищуючий пілінг з мікрогранулами рисового воску 150мл, пудра тим'яна 80г
+                    Ультраделікатна заспокійлива лінія для чутливої шкіри голови: шампунь 240/950 мл, гель заспокійливий для подразненої шкіри голови 150 мл, засіб для чутливої шкіри голови 50 мл, пудра безсмертника для чутливої шкіри голови 50 г
                 </p>
-
-                <p><b>Мета: лікування лупи та лущення.</b>
-                Ідеально підходить для сухої та жирної лупи на шкірі голови. 
+                <p><b>Мета: заспокоєння чутливої та подразненої шкіри голови.</b>
+                    Ідеально підходить для сухої, чутливої шкіри голови або подразненої шкіри.
                 </p>
 
                 <p><b>Активні компоненти:</b>
-                    біодинамічний розмарин, біодинамічний тим’ян, мікрогранули рисового воску та соєвий лецитин.
+                    біодинамічний фенхель, біодинамічний безсмертник, зантоксилум.
                 </p>
             </div>
             <div class="big-plate_img"></div>
@@ -189,18 +187,18 @@
         <div class="big-plate">
             <div class="big-plate_text">
                 <h4>
-                    Purifying
+                    Hair loss
                 </h4>
                 <p>
-                    Догляд за волоссям та шкірою голови з лупою: шампунь від лупи для жирної шкіри голови 240/950 мл, шампунь від лупи для сухої шкіри голови 240/950 мл, засіб від лупи для жирної шкіри голови 50 мл, засіб від лупи для сухої шкіри голови 50 мл, очищуючий пілінг з мікрогранулами рисового воску 150мл, пудра тим'яна 80г
+                    Мікростимулююче лікування для посилення росту слабкого волосся й профілактики його випадіння: шампунь 240/950 мл, засіб від випадіння волосся для чутливої шкіри голови 100 мл та набір з 5-ти ампул по 10 мл для домашнього використання, засіб від випадіння волосся для нормальної шкіри голови 100 мл та набір з 5-ти ампул по 10 мл для домашнього використання
                 </p>
 
-                <p><b>Мета: лікування лупи та лущення.</b>
-                Ідеально підходить для сухої та жирної лупи на шкірі голови. 
+                <p><b>Мета: лікування випадіння волосся.</b>
+                    Ідеально підходить для нормальної та чутливої шкіри голови.
                 </p>
 
                 <p><b>Активні компоненти:</b>
-                    біодинамічний розмарин, біодинамічний тим’ян, мікрогранули рисового воску та соєвий лецитин.
+                    біодинамічна м'ята, органічний кінський каштан, стовбурові клітини буддлеї давида.
                 </p>
             </div>
             <div class="big-plate_img"></div>
