--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -262,7 +262,7 @@
 
       <div class="new-part">
         <h3 class=" translated-text" key="application-text" >Переваги АКТИВ ФЛОРА бебі</h3>
-        <div class="new-part_logo"></div>
+        <!-- <div class="new-part_logo"></div> -->
         <div class="new-part_container">
           <div class="new-part_container1">
             <div class="new-part_plate translated-text" key="application-text-one">
@@ -272,7 +272,7 @@
                 </p> -->
             </div>
             <div class="new-part_plate translated-text" key="application-text-three">
-              <h4>Рівень доказовості «1» в профілактиці антибіотико-асоційованої діареї та лікуванні інфекційної діареї<sup>1</sup></h4>
+              <h4>Зручне застосування - 1 раз в день</h4>
               <!-- <p>Зручний спосіб застосування.</p> -->
             </div>
             <div class="new-part_plate  translated-text" key="application-text-seven">
@@ -286,7 +286,8 @@
               <!-- <p>Лактобактерія LGG має найвищий рівень доказової бази при діареї у дітей та дорослих.</p> -->
             </div>
             <div class="new-part_plate translated-text" key="application-text-four">
-              <h4>Зручне застосування - 1 раз в день</h4>
+              <h4>Рівень доказовості «1» в профілактиці антибіотико-асоційованої діареї та лікуванні інфекційної діареї<sup>1</sup></h4>
+              
               <!-- <p>Перший європейський пробіотик з найвищим вмістом діючої речовини (бактерії LGG) в одній краплі.<sup>2</sup></p> -->
             </div>
             <div class="new-part_plate  translated-text" key="application-text-six">
