--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -276,7 +276,7 @@
               <!-- <p>Зручний спосіб застосування.</p> -->
             </div>
             <div class="new-part_plate  translated-text" key="application-text-seven">
-              <h4>1-й пробіотик з оливкою олією<sup>2</sup>жирні кислоти якого  найбільш схожі до грудного молока<sup>3</sup></h4>
+              <h4>1-й пробіотик з оливкою олією<sup>2</sup> жирні кислоти якого  найбільш схожі до грудного молока<sup>3</sup></h4>
               <!-- <p>Lactobacillus rhamnosus (LGG) є найбільш вивченим у світі штамом пробіотичних мікроорганізмів.</p> -->
             </div>
           </div>
@@ -673,14 +673,14 @@
         <p class="translated-text" key="disclamer-text">
         На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці.</p>
 
-          <p class="translated-text" key="disclamer-text2">Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.</p><br>
+          <p class="translated-text" key="disclamer-text2">Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.</p>
 
-          <p class="translated-text" key="disclamer-text3">Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com»</p>
+          <p class="translated-text" key="disclamer-text3">Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com»</p><br>
           <p class="translated-text" key="disclamer-text4">Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03.</p>
 
           <p class="translated-text" key="disclamer-text5">Виробник: Komarko Sp. z o. o. (Польща). </p>
 
-          <p class="translated-text" key="disclamer-text6">Постачальник:  Альпен Фарма АГ (Швейцарія). </p>
+          <!-- <p class="translated-text" key="disclamer-text6">Постачальник:  Альпен Фарма АГ (Швейцарія). </p> -->
         </p>
       </div>
       <div class="block-after_logo-container">
