--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 			<a href="Vitango-new/index.html">Vitango-new</a>
 			<a href="Cinnabsin-AZ/index.html">Cinnabsin-AZ</a>
 			<a href="Lazea-new/index.html">laSea-new</a>
+			<a href="AlpeKid/index.html">AlpeKid</a>
 
 		</section>
 	</main>
@@ -285,6 +286,9 @@
 	}
 	a:nth-child(60)::before {
 		background: url("./Lazea-new/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(61)::before {
+		background: url("./AlpeKid/logo.svg")no-repeat center / contain;
 	}
 </style>
 
