--- a/AlpeKid/index.html
+++ b/AlpeKid/index.html
@@ -280,7 +280,7 @@
                     <div class='block-2_text'>
                         <div class="yellow-corner_top"></div>
                         <p>«Знание <strong>придаёт уверенность!</strong> Помните: предупреждён – значит вооружён!»</p>
-                        <div class="yellow-corner_bottom"></div>
+                        <div class="yellow-corner_bottom yellow-corner_bottom-2"></div>
                     </div>
                     <div class="block-2_image block-2_image-3"></div>
             </div>
