--- a/AlpeKid/index.html
+++ b/AlpeKid/index.html
@@ -297,7 +297,9 @@
         <div class="block-6">
             <div class="block-6_plate">
                 <div class="block-6_plate-img"></div>
-                <h5>Детям от 3 до 7 лет:</h5>
+                <div class="block-6_ttt">
+                    <h5>Детям от 3 до 7 лет:</h5>
+                </div>
                 <ul>
                     <li>Растворить средство в ½ стакана питьевой воды комнатной температуры.</li>
                     <li>Пить 1-2 раза в сутки.</li>
@@ -305,7 +307,9 @@
             </div>
             <div class="block-6_plate">
                 <div class="block-6_plate-img"></div>
-                <h5>Взрослым и детям от 12 лет:</h5>
+                <div class="block-6_ttt">
+                    <h5>Взрослым и детям от 12 лет:</h5>
+                </div>
                 <ul>
                     <li>Растворить средство в ½ стакана питьевой воды комнатной температуры.</li>
                     <li>Пить 2-3 раза в сутки.</li>
