--- a/AlpeKid/index.html
+++ b/AlpeKid/index.html
@@ -384,6 +384,10 @@
     <div class="block-7__img">
         <!-- <a target="_blank" class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">ГДЕ КУПИТЬ</a> -->
     </div>
+    <p>
+        Источники информации:</p>
+    <p>1. Адаптировано из https://www.webmd.com/
+    </p>
 </div>
 
 
