--- a/AlpeKid/index.html
+++ b/AlpeKid/index.html
@@ -20,7 +20,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob">ГДЕ КУПИТЬ</a>
+            <a class="where-to-buy-mob" href="#block-5">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Преимущества</a>
                 <a class="navmenu" href="#block-2">Состав и действие</a>
