--- a/AlpeKid/index.html
+++ b/AlpeKid/index.html
@@ -22,12 +22,12 @@
             <a class="logo-container" href="#top"></a>
             <a class="where-to-buy-mob" href="#block-5">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
-                <a class="navmenu" href="#block-1" >Преимущества</a>
-                <a class="navmenu" href="#block-2">Состав и действие</a>
-                <a class="navmenu" href="#block-3">Как принимать</a>
-                <a class="navmenu" href="#block-4">Частые вопросы</a>
+                <a class="navmenu menuLi1" href="#block-1" >Преимущества</a>
+                <a class="navmenu menuLi2" href="#block-2">Состав и действие</a>
+                <a class="navmenu menuLi3" href="#block-3">Как принимать</a>
+                <a class="navmenu menuLi4" href="#block-4">Частые вопросы</a>
 
-                <a class=" where-to-buy" href="#block-5">ГДЕ КУПИТЬ</a>
+                <a class=" where-to-buy menuLi5" href="#block-5">ГДЕ КУПИТЬ</a>
                 <a class="lang lang-dop"><b>RU</b></a>
                 <a class="lang" href=""><p>UA</p>
                 </a>
