--- a/Congress/index.html
+++ b/Congress/index.html
@@ -28,6 +28,7 @@
 
                 <a class=" where-to-buy" href="#block-2">Реєстрація</a>
                 <!-- <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>/  RU</p></a> -->
+                <a class="facebook-a"></a><a class="youtube-a"><p></p></a>
             </div>
 
             <!--        mobile menu-->
@@ -57,6 +58,7 @@
                         <li>
                             <a class=" where-to-buy" href="#block-2">Реєстрація</a>
                         </li>
+                			<!-- <a class="facebook-a"></a><a class="youtube-a"><p></p></a> -->
 <!--                         <li>
                             <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
                         </li> -->
