--- a/Congress/index-4.html
+++ b/Congress/index-4.html
@@ -27,6 +27,8 @@
                 <a class="navmenu" href="#block-1">контакти</a>
 
                 <a class=" where-to-buy" href="#block-2">Реєстрація</a>
+                <a class="facebook-a"></a><a class="youtube-a"><p></p></a>
+                
                 <!-- <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>/  RU</p></a> -->
             </div>
 
