--- a/Congress/index-2.html
+++ b/Congress/index-2.html
@@ -21,7 +21,7 @@
             <!-- <a class="where-to-buy-mob" href="#sticker">Реєстрація</a> -->
             <div class="navigation-menu">
                 <a class="navmenu" href="./index.html" >головна</a>
-                <a class="navmenu" href="#top">програма</a>
+                <a class="navmenu active" href="#top">програма</a>
                 <a class="navmenu" href="./index-3.html">тези</a>
                 <a class="navmenu" href="./index-4.html">фото і Відео</a>
                 <a class="navmenu" href="#block-1">контакти</a>
