--- a/Congress/index-3.html
+++ b/Congress/index-3.html
@@ -22,7 +22,7 @@
             <div class="navigation-menu">
                 <a class="navmenu" href="./index.html" >головна</a>
                 <a class="navmenu" href="./index-2.html">програма</a>
-                <a class="navmenu" href="#top">тези</a>
+                <a class="navmenu active" href="#top">тези</a>
                 <a class="navmenu" href="./index-4.html">фото і Відео</a>
                 <a class="navmenu" href="#block-1">контакти</a>
 
