--- a/Congress/index-4.html
+++ b/Congress/index-4.html
@@ -23,7 +23,7 @@
                 <a class="navmenu" href="./index.html" >головна</a>
                 <a class="navmenu" href="./index-2.html">програма</a>
                 <a class="navmenu" href="./index-3.html">тези</a>
-                <a class="navmenu" href="#top">фото і Відео</a>
+                <a class="navmenu active" href="#top">фото і Відео</a>
                 <a class="navmenu" href="#block-1">контакти</a>
 
                 <a class=" where-to-buy" href="#block-2">Реєстрація</a>
