--- a/Congress/index.html
+++ b/Congress/index.html
@@ -20,7 +20,7 @@
             <a class="logo-container" href="./index.html"></a>
             <!-- <a class="where-to-buy-mob" href="#sticker">Реєстрація</a> -->
             <div class="navigation-menu">
-                <a class="navmenu" href="#top" >головна</a>
+                <a class="navmenu active" href="#top" >головна</a>
                 <a class="navmenu" href="./index-2.html">програма</a>
                 <a class="navmenu" href="./index-3.html">тези</a>
                 <a class="navmenu" href="./index-4.html">фото і Відео</a>
@@ -210,7 +210,7 @@
 				</div>
 			</div>
 			<h2>СПІВГОЛОВИ:</h2>
-			<div class="people_block-1">
+			<div class="people_block-1 people_block-12">
 				<div class="people_plate">
 					<div class="people_plate_img"></div>
 					<b>Антипкін Ю.Г.</b>
@@ -228,7 +228,7 @@
 				</div>
 			</div>
 			<h2>ЗАСТУПНИКИ:</h2>
-			<div class="people_block-1">
+			<div class="people_block-1 people_block-13">
 				<div class="people_plate">
 					<div class="people_plate_img"></div>
 					<b>Гінзбург В.Г.</b>
@@ -287,7 +287,7 @@
                 	</p>
                 	</div>
                 	
-        			<p class="more">Дізнатись більше</p>
+        			<p class="more">Повний список</p>
                 </div>
                 <div class="panel">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
